trying to solve parallax effect on safari

--- a/components/Index.module.css
+++ b/components/Index.module.css
@@ -10,3 +10,13 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+@supports (background-attachment: fixed) {
+  .values {
+    background-image: url("../public/assets/home-values-background@2x.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+}
